Fixed gap.

--- a/0dependencies/default.css
+++ b/0dependencies/default.css
@@ -97,7 +97,7 @@
 .pointer { cursor: pointer; }
 .ui-disabled.pointer,.ui-disabled .pointer { cursor: not-allowed!important; }
 
-.grid-lg-1,.grid-md-1,.grid-sm-1,.grid-xs-1, .grid-lg-2,.grid-md-2,.grid-sm-2,.grid-xs-2, .grid-lg-3,.grid-md-3,.grid-sm-3,.grid-xs-3, .grid-lg-4,.grid-md-4,.grid-sm-4,.grid-xs-4, .grid-lg-6,.grid-md-6,.grid-sm-6,.grid-xs-6, .grid-lg-7,.grid-md-7,.grid-sm-7,.grid-xs-7, .grid-lg-8,.grid-md-8,.grid-sm-8,.grid-xs-8, .grid-lg-9,.grid-md-9,.grid-sm-9,.grid-xs-9, .grid-lg-10,.grid-md-10,.grid-sm-10,.grid-xs-10, .grid-lg-11,.grid-md-11,.grid-sm-11,.grid-xs-11, .grid-lg-12,.grid-md-12,.grid-sm-12,.grid-xs-12 { display: grid; gap: var(--gap); }
+.grid-lg-1,.grid-md-1,.grid-sm-1,.grid-xs-1, .grid-lg-2,.grid-md-2,.grid-sm-2,.grid-xs-2, .grid-lg-3,.grid-md-3,.grid-sm-3,.grid-xs-3, .grid-lg-4,.grid-md-4,.grid-sm-4,.grid-xs-4, .grid-lg-6,.grid-md-6,.grid-sm-6,.grid-xs-6, .grid-lg-7,.grid-md-7,.grid-sm-7,.grid-xs-7, .grid-lg-8,.grid-md-8,.grid-sm-8,.grid-xs-8, .grid-lg-9,.grid-md-9,.grid-sm-9,.grid-xs-9, .grid-lg-10,.grid-md-10,.grid-sm-10,.grid-xs-10, .grid-lg-11,.grid-md-11,.grid-sm-11,.grid-xs-11, .grid-lg-12,.grid-md-12,.grid-sm-12,.grid-xs-12 { display: grid; column-gap: var(--gap); }
 .jc-lg .grid-1, .jc-md .grid-1, .jc-ms .grid-1, .jc-sm .grid-1, .jc-xs .grid-1 { grid-template-columns: repeat(1, 1fr); }
 .jc-lg .grid-2, .jc-md .grid-2, .jc-ms .grid-2, .jc-sm .grid-2, .jc-xs .grid-2 { grid-template-columns: repeat(2, 1fr); }
 .jc-lg .grid-3, .jc-md .grid-3, .jc-ms .grid-3, .jc-sm .grid-3, .jc-xs .grid-3 { grid-template-columns: repeat(3, 1fr); }
